// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Community form should display successfull submission screen 1`] = `
<StandardPage
  title="Add a missing community"
>
  <ConfirmDiscardFormChanges
    dirty={true}
    submitSucceeded={true}
  >
    <form>
      <NavigationDialogBox
        when={false}
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <StandardCard
              help={Object {}}
              title="Community details"
            >
              <WithStyles(ForwardRef(Grid))
                container={true}
                spacing={3}
              >
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={12}
                >
                  <Field
                    autoFocus={true}
                    component={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "propTypes": Object {
                          "classes": [Function],
                          "help": [Function],
                          "innerRef": [Function],
                          "textFieldId": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    disabled={false}
                    fullWidth={true}
                    label="Title of community"
                    name="rek_title"
                    placeholder="Type a title for this community"
                    required={true}
                    textFieldId="rek-title"
                    type="text"
                    validate={
                      Array [
                        [Function],
                      ]
                    }
                  />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={12}
                >
                  <Field
                    component={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "propTypes": Object {
                          "classes": [Function],
                          "help": [Function],
                          "innerRef": [Function],
                          "textFieldId": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    disabled={false}
                    fullWidth={true}
                    label="Community description"
                    multiline={true}
                    name="rek_description"
                    placeholder="Type a description of this community."
                    required={true}
                    rows={5}
                    textFieldId="rek-description"
                    validate={
                      Array [
                        [Function],
                      ]
                    }
                  />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={12}
                >
                  <WithStyles(ForwardRef(Typography))>
                    Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                  </WithStyles(ForwardRef(Typography))>
                  <Field
                    ListEditorForm={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": [Function],
                      }
                    }
                    component={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": [Function],
                      }
                    }
                    disabled={false}
                    listEditorId="rek-keywords"
                    locale={
                      Object {
                        "form": Object {
                          "locale": Object {
                            "addButtonLabel": "Add",
                            "id": "keywords-input",
                            "inputFieldHint": "Type keywords",
                            "inputFieldLabel": "Keywords",
                          },
                        },
                        "header": Object {
                          "locale": Object {
                            "deleteAll": "Remove all keywords",
                            "deleteAllConfirmation": Object {
                              "cancelButtonLabel": "No",
                              "confirmButtonLabel": "Yes",
                              "confirmationMessage": "Are you sure you want to delete all keywords?",
                              "confirmationTitle": "Delete all",
                            },
                            "nameColumn": "Keyword",
                            "reorderColumn": "Reorder keywords",
                          },
                        },
                        "row": Object {
                          "locale": Object {
                            "deleteHint": "Remove this keyword",
                            "deleteRecordConfirmation": Object {
                              "cancelButtonLabel": "No",
                              "confirmButtonLabel": "Yes",
                              "confirmationMessage": "Are you sure you want to delete this keyword?",
                              "confirmationTitle": "Delete keyword",
                            },
                            "moveDownHint": "Move keyword down the order",
                            "moveUpHint": "Move keyword up the order",
                          },
                        },
                      }
                    }
                    maxCount={10}
                    name="fez_record_search_key_keywords"
                    searchKey={
                      Object {
                        "order": "rek_keywords_order",
                        "value": "rek_keywords",
                      }
                    }
                  />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={12}
                >
                  <WithStyles(ForwardRef(Typography))>
                    Internal Notes (admin)
                  </WithStyles(ForwardRef(Typography))>
                  <Field
                    component={[Function]}
                    disabled={false}
                    fullWidth={true}
                    label="Internal Notes (admin)"
                    multiline={true}
                    name="internalNotes"
                    placeholder="Optionally enter internal notes"
                    richEditorId="internalNotes"
                    rows={5}
                  />
                </WithStyles(ForwardRef(Grid))>
              </WithStyles(ForwardRef(Grid))>
            </StandardCard>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <Alert
              allowDismiss={false}
              customIcon={null}
              customType={null}
              disableAlertClick={false}
              dismissTitle="Click to dismiss this alert"
              message="New work has been saved successfully."
              showLoader={false}
              title="Success"
              type="done"
              wiggle={null}
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={true}
            xs={false}
          />
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              data-testid="cancel-community"
              disabled={false}
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Cancel and return to the homepage
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="primary"
              data-testid="submit-community"
              fullWidth={true}
              onClick={[MockFunction]}
              variant="contained"
            >
              Add community
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </form>
  </ConfirmDiscardFormChanges>
</StandardPage>
`;

exports[`Community form should render form 1`] = `
<StandardPage
  title="Add a missing community"
>
  <ConfirmDiscardFormChanges
    dirty={true}
    submitSucceeded={false}
  >
    <form>
      <NavigationDialogBox
        when={true}
      />
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <StandardCard
              help={Object {}}
              title="Community details"
            >
              <WithStyles(ForwardRef(Grid))
                container={true}
                spacing={3}
              >
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={12}
                >
                  <Field
                    autoFocus={true}
                    component={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "propTypes": Object {
                          "classes": [Function],
                          "help": [Function],
                          "innerRef": [Function],
                          "textFieldId": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    disabled={false}
                    fullWidth={true}
                    label="Title of community"
                    name="rek_title"
                    placeholder="Type a title for this community"
                    required={true}
                    textFieldId="rek-title"
                    type="text"
                    validate={
                      Array [
                        [Function],
                      ]
                    }
                  />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={12}
                >
                  <Field
                    component={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "propTypes": Object {
                          "classes": [Function],
                          "help": [Function],
                          "innerRef": [Function],
                          "textFieldId": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    disabled={false}
                    fullWidth={true}
                    label="Community description"
                    multiline={true}
                    name="rek_description"
                    placeholder="Type a description of this community."
                    required={true}
                    rows={5}
                    textFieldId="rek-description"
                    validate={
                      Array [
                        [Function],
                      ]
                    }
                  />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={12}
                >
                  <WithStyles(ForwardRef(Typography))>
                    Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                  </WithStyles(ForwardRef(Typography))>
                  <Field
                    ListEditorForm={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": [Function],
                      }
                    }
                    component={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": [Function],
                      }
                    }
                    disabled={false}
                    listEditorId="rek-keywords"
                    locale={
                      Object {
                        "form": Object {
                          "locale": Object {
                            "addButtonLabel": "Add",
                            "id": "keywords-input",
                            "inputFieldHint": "Type keywords",
                            "inputFieldLabel": "Keywords",
                          },
                        },
                        "header": Object {
                          "locale": Object {
                            "deleteAll": "Remove all keywords",
                            "deleteAllConfirmation": Object {
                              "cancelButtonLabel": "No",
                              "confirmButtonLabel": "Yes",
                              "confirmationMessage": "Are you sure you want to delete all keywords?",
                              "confirmationTitle": "Delete all",
                            },
                            "nameColumn": "Keyword",
                            "reorderColumn": "Reorder keywords",
                          },
                        },
                        "row": Object {
                          "locale": Object {
                            "deleteHint": "Remove this keyword",
                            "deleteRecordConfirmation": Object {
                              "cancelButtonLabel": "No",
                              "confirmButtonLabel": "Yes",
                              "confirmationMessage": "Are you sure you want to delete this keyword?",
                              "confirmationTitle": "Delete keyword",
                            },
                            "moveDownHint": "Move keyword down the order",
                            "moveUpHint": "Move keyword up the order",
                          },
                        },
                      }
                    }
                    maxCount={10}
                    name="fez_record_search_key_keywords"
                    searchKey={
                      Object {
                        "order": "rek_keywords_order",
                        "value": "rek_keywords",
                      }
                    }
                  />
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={12}
                >
                  <WithStyles(ForwardRef(Typography))>
                    Internal Notes (admin)
                  </WithStyles(ForwardRef(Typography))>
                  <Field
                    component={[Function]}
                    disabled={false}
                    fullWidth={true}
                    label="Internal Notes (admin)"
                    multiline={true}
                    name="internalNotes"
                    placeholder="Optionally enter internal notes"
                    richEditorId="internalNotes"
                    rows={5}
                  />
                </WithStyles(ForwardRef(Grid))>
              </WithStyles(ForwardRef(Grid))>
            </StandardCard>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={true}
            xs={false}
          />
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              data-testid="cancel-community"
              disabled={false}
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Cancel and return to the homepage
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="primary"
              data-testid="submit-community"
              fullWidth={true}
              onClick={[MockFunction]}
              variant="contained"
            >
              Add community
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </form>
  </ConfirmDiscardFormChanges>
</StandardPage>
`;

exports[`Community form should render success panel 1`] = `
<StandardPage
  title="Add a missing community"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        title="Community added successfully"
      >
        <WithStyles(ForwardRef(Typography))>
          Your new community was created successfully.
        </WithStyles(ForwardRef(Typography))>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Return to the homepage
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        color="primary"
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Add another community
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;
